fix for single event spacing issue

--- a/src/index.css
+++ b/src/index.css
@@ -341,7 +341,6 @@ html, body {
   .content {
     flex: 1;
     display: flex;
-    flex-grow: 1;
     flex-direction: column;
   }  
 
